@@ -13,6 +13,7 @@ Changes in openair 0.7-0 [2012-05-30]
 	data missing
 *	New option start.day in cutData that affects most plots;
 	allows users to set start day when type = "weekday"
+*	Allow categorical scales in calendarPlot
 
 
 Changes in openair 0.6-0 [2012-04-10]
